# TribalWarsOGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MathUtil.h  OpenGLFromScratch.sln  build.gradle  old_Makefile  settings.gradle
OpenGLFromScratch/: Camera.cpp  Camera.h  Display.cpp  Display.h  Drawable.cpp  Drawable.h  InputEventHandler.cpp  InputEventHandler.h  Keyboard.cpp  Keyboard.h  MathUtil.cpp  Mesh.cpp  Mouse.cpp  Mouse.h  MouseListener.h  OpenGLFromScratch.vcxproj  OpenGLFromScratch.vcxproj.filters  OscilatingObject.cpp  Player.cpp  Player.h  Shader.cpp  Shader.h  Texture.cpp  Transform.cpp  Transform.h  UI.cpp  UI.h  Util.h  Vertex.h  WorldObject.cpp  WorldObject.h  build.gradle  main.cpp  main.h  makefile  resource.h  timerTest.cpp
OpenGLFromScratch/res/: Niko.mtl  basicShader.v.glsl  textShader.f.glsl  textShader.v.glsl
OpenGLFromScratch/scripts/: showError.bat  showLError.bat
OpenGLFromScratch/src/: main.cpp  new_main.cpp
dependancies/: dependancies.txt
gradle/wrapper/: gradle-wrapper.properties
include/display/: Display.h
include/main/: main.h
include/model/: Drawable.h  Entity.h  EntityManager.h
include/util/: MathUtil.h  Util.h
notes/: Longterm_TODO.txt  WARNINGS.txt  big_bugs.txt  camera.cpp  camera.h  next_steps.txt  resources.txt  sanity_check.txt  todo.txt  ways_to_draw.txt
res/meshes/: myCar.mtl
scripts/: MakeMake.py  MakeMakeConfig.cfg  build.bat  dependancies.txt  get_dependancies.sh  runMain.bat
src/: main.cpp
src/display/: Display.h  (+3 more)
tests/: EntityManagerTest.cpp  LinkedListTest.cpp
todo/: sanity_check.txt
(+83 files in other folders)
